SERVER-36479 Don't redact planSummary in logs